--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -5,17 +5,13 @@
         <form method="post">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4"><Join Today</legend>
+                <legend class="border-bottom mb-4">Blog Post</legend>
                 {{ form|crispy }}
                 <div class="form-group">
-                    <button class="btn btn-outline-info" type="submit">SignUp</button>
+                    <button class="btn btn-outline-info" type="submit">Post</button>
 
                 </div>
             </fieldset>
         </form>
-        <div class="border-top pt-3">
-            <small class="text-muted">Already have an Account?</small>
-            <a class="ml-3" href="{% url 'login' %}">Sign in</a>
-        </div>
     </div>
 {% endblock %}
