--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -24,14 +24,13 @@
         <div style="padding-left:10px" >
            <span class="back" style="padding-left:10px">  <a   href="{% url 'blog-home' %}">Twitter Blog</a></span>
            <span class="back" style="padding-left:10px"> <a   href="{% url 'blog-home' %}">Home</a></span>
-           <span  class="back" style="padding-left:10px"> <a   href="{% url 'blog-about' %}">About</a></span>
+<!--           <span  class="back" style="padding-left:10px"> <a   href="{% url 'blog-about' %}">About</a></span>-->
         </div>
         <div>
             {% if user.is_authenticated %}
-                <span class="back" style="padding-right:10px"> <a  href="{% url 'post-create' %}">New Post</a></span>
                 <span class="back" style="padding-right:10px"> <a  href="{% url 'profile' %}">Profile</a></span>
-
                 <span class="back" style="padding-right:10px"> <a  href="{% url 'logout' %}">Logout</a></span>
+                <span  class="back" style="padding-left:10px"> <a   href="{% url 'blog-like' %}">MyLikes</a></span>
             {% else %}
                 <span class="back" style="padding-right:10px"> <a  href="{% url 'login' %}">Login</a></span>
                 <span class="back"> <a href="{% url 'users-register' %}">Register</a></span>
