--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -12,9 +12,9 @@
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Profile Info</legend>
-                    {{ u_form|crispy }}
-                    {{ p_form|crispy }}
+                <legend class="border-bottom mb-4"><Profile Info</legend>
+                {{ u_form|crispy }}
+                {{ p_form|crispy }}
                 <div class="form-group">
                     <button class="btn btn-outline-info" type="submit">Update</button>
 
